# foundry-copilot-hr-policy-knowledge

./: .env.example  .env.pattern-a.example  .gitignore  CONTRIBUTING.md  README.md  azure.yaml  main.py  pyproject.toml  pytest.ini
copilot/: openapi-lookup-v2.json  openapi-v2.json  quick_reference_guide.md
copilot/skills/: hr-glossary.skill.md
docs/: AgentArchitecturePaths.md  Architecture.md  ArchitectureOptions.md  CopilotStudioHybridExample.md  CopilotStudioIntegration.md  CopilotStudioLookupRouting.md  CopilotStudioTestingGuide.md  DataPipelineAndTesting.md  Distribution-M365-Teams.md  FoundryAgentArchitecture.md  LabCoverage.md  RetrievalPatterns.md  SharePointLogicAppsArchitecture.md  Walkthrough.md  sharepoint_sequence_diagram.mmd
eval/datasets/: hr_qa_testset.csv
infra/: README.md  main.bicep  main.parameters.json
infra/bicep/: README.md  abbreviations.json  main.bicep
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: README.md  create_foundry_agent.py  generate_architecture_diagram.py  generate_synthethic_docs.py  index_knowledge_base.py  index_knowledge_base_chunking.py  index_knowledge_base_docintel_chunking.py  index_knowledge_base_integrated_vectorization.py  setup.sh  upload_to_blob.py
scripts/demo/: README.md  __init__.py  _common.py  demo_decision_tree.py  test_pattern_a.py  test_pattern_b.py  test_pattern_c.py  test_pattern_hosted.py
src/agents/: create_foundry_agent.py  hr_policy_agent.py  hr_policy_agent_af.py  orchestrator.py
src/backend/: Dockerfile  __init__.py  main.py
src/config/: model_policy.py  search_config.json  search_config.py
src/copilot_studio/: __init__.py  service.py
src/document_processing/: __init__.py  chunking.py  document_ingestion.py
src/evaluation/: __init__.py  graders.py  run_eval.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend-copilot-studio/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/hosted_agent/: .dockerignore  Dockerfile  agent.manifest.yaml  agent.yaml  requirements.txt  server.py
src/indexing/: reindex.py
src/memory/: __init__.py  memory_store.py
tests/: conftest.py  test_backend.py  test_chunking.py  test_document_processing.py  test_evaluation_graders.py  test_hr_policy_agent_prompt.py  test_lookup_endpoint.py  test_memory_store.py  test_orchestrator_agent_service_switch.py  test_search.py  test_search_context_provider.py
(+21 files in other folders)
